argo/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prism-web
  namespace: prism-servers
  labels:
    app: prism-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prism-web
  template:
    metadata:
      labels:
        app: prism-web
    spec:
      serviceAccountName: sa-prism-web
      containers:
      - name: web
        image: docker.io/prismhosting/web
        command: ["bundle", "exec", "rails", "server", "--binding", "0.0.0.0"]
        ports:
          - containerPort: 3000
        volumeMounts:
          - mountPath: "/prism/storage"
            name: "storage"
      volumes:
      - name: "storage"
        persistentVolumeClaim:
          claimName: "prism-web-storage"
