argo/worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prism-worker
  namespace: prism-servers
  labels:
    app: prism-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prism-worker
  template:
    metadata:
      labels:
        app: prism-worker
    spec:
      containers:
      - name: web
        image: docker.io/prismhosting/web
        command: ["bundle", "exec", "sidekiq"]
