argo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: prism-web
  namespace: prism-servers
spec:
  selector:
    app: prism-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
